force use "as arguments" as input | by Minja from MacBook

--- a/img Search/img Search.workflow/Contents/Info.plist
+++ b/img Search/img Search.workflow/Contents/Info.plist
@@ -12,7 +12,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>image Search</string>
+				<string>img Search</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
