update README | by Minja from MacBook

--- a/Copy Deep Link with UUID/Generate Deep Link.workflow/Contents/Info.plist
+++ b/Copy Deep Link with UUID/Generate Deep Link.workflow/Contents/Info.plist
@@ -12,10 +12,19 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Copy Deep Link with UUID</string>
+				<string>Generate Deep Link</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
+			<key>NSRequiredContext</key>
+			<dict>
+				<key>NSApplicationIdentifier</key>
+				<string>com.apple.finder</string>
+			</dict>
+			<key>NSSendFileTypes</key>
+			<array>
+				<string>public.item</string>
+			</array>
 		</dict>
 	</array>
 </dict>
